[gd_scene load_steps=4 format=3 uid="uid://cdg1ch3ng255f"]

[ext_resource type="Script" path="res://scene/interface/inventory/item_stack_ui.gd" id="1_u5l8c"]
[ext_resource type="FontFile" uid="uid://b3ibjetxkblh2" path="res://asset/font/Alkhemikal.ttf" id="2_tfwaq"]

[sub_resource type="LabelSettings" id="LabelSettings_5o8qf"]
font = ExtResource("2_tfwaq")
font_size = 32
shadow_color = Color(0, 0, 0, 0.509804)

[node name="ItemStackUI" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_u5l8c")

[node name="ItemIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuantityLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1.0
offset_bottom = 32.0
label_settings = SubResource("LabelSettings_5o8qf")
